--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,12 @@
-<div style="marign: 5em;">
-  <button (click)="login()">Login</button>
-  <button (click)="logout()">Logout</button>
-</div>
+
+<app-header></app-header>
+
+<!--<div style="margin: 5em;">-->
+<!--  <button (click)="login()">Login</button>-->
+<!--  <button (click)="logout()">Logout</button>-->
+<!--  <app-user></app-user>-->
+
+<!--</div>-->
+
+<app-footer></app-footer>
 <router-outlet></router-outlet>
