--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -1,27 +1,28 @@
 <div class="jumbotron bg-transparent text-center">
-  <div *ngIf="!user" class="card text-center"insta>
+  <div *ngIf="!user" class="card text-center" insta>
     <h6 class="card-header">
       Social Login Demo
     </h6>
     <div class="card-block">
-      <h4 class="card-title">Not signed in</h4>
-      <p class="card-text">Sign in with</p>
+      <p class="card-text">Σύνδεση με λογαριασμό Google</p>
     </div>
     <div class="card-block">
       <button class="btn btn-social-icon btn-google mx-1" (click)="signInWithGoogle()"><span
-        class="fab fa-google"></span> Sign in</button>
+        class="fab fa-google"></span> Σύνδεση
+      </button>
     </div>
   </div>
   <div *ngIf="user" class="card text-center">
     <h6 class="card-header">
       Social Login Demo
     </h6>
-    <div class="card-block"></div>
+    <div class="card-block small"></div>
     <img *ngIf="user.photoUrl" class="card-img-top img-responsive photo small" src="{{ user.photoUrl }}">
     <div class="card-block">
       <h4 class="card-title">{{ user.name }}</h4>
       <p class="card-text">{{ user.email }}</p>
       <p class="card-text">Logged in with {{ user.provider }}</p>
+      <p class="card-text">token{{ user.idToken }}</p>
     </div>
     <div class="card-block">
       <button class="btn btn-danger" (click)="signOut()">Sign out</button>
