uploading and retrieving image

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,7 +24,7 @@
         <a class="nav-link" routerLink="/admin_panel">Διαχείριση</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/user">τεστ</a>
+        <a class="nav-link" routerLink="/imageUpload">τεστ</a>
       </li>
 
     </ul>
