--- a/src/app/movie/movie.component.css
+++ b/src/app/movie/movie.component.css
@@ -1,4 +1,11 @@
-/* HeroesComponent's private CSS styles */
+
+.custom-dark-blue { color: #010626; }
+.custom-blue { color: #021F59; }
+.custom-light-blue { color: #033E8C; }
+.custom-very-light-blue { color: #05DBF2; }
+.custom-grey { color: #BFAE99; }
+
+
 .movies {
   margin: 0 0 2em 0;
   list-style-type: none;
