--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -1,5 +1,22 @@
-<ul class="movies">
-  <li *ngFor="let movie of movies" >
-    <span class="badge">{{movie.id}}</span> {{movie.title}}
-  </li>
-</ul>
+<div class="p-5">
+  <ul>
+    <li *ngFor="let movie of movies">
+      <div class="card" style="width: 18rem;">
+        <!--      <img class="card-img-top" [src]="retrievedImage" alt="Card image cap">-->
+        <img class="card-img-top" [src]="'data:image/jpeg;base64,'+movie.poster" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">{{movie.title}}</h5>
+          <p class="card-text"> Description </p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Ώρα προβολής</li>
+          <li class="list-group-item">Αίθουσα</li>
+          <li class="list-group-item">Διαθέσιμες θέσεις</li>
+        </ul>
+        <div class="card-body">
+          <a href="#" class="card-link">Κράτηση</a>
+        </div>
+      </div>
+    </li>
+  </ul>
+</div>
