--- a/src/app/movie/movie.component.css
+++ b/src/app/movie/movie.component.css
@@ -6,46 +6,26 @@
 .custom-grey { color: #BFAE99; }
 
 
-.movies {
-  margin: 0 0 2em 0;
-  list-style-type: none;
-  padding: 0;
-  width: 15em;
+.card{
+  width: 18rem;
+  height: 55rem;
+  margin:auto;
 }
-.movies li {
-  cursor: pointer;
-  position: relative;
-  left: 0;
-  background-color: #eee;
-  margin: 0.5em;
-  padding: 0.3em 0;
-  height: 1.6em;
-  border-radius: 4px;
+
+.card-img-top{
+  height: 25rem;
 }
-.movies li:hover {
-  color: #607d8b;
-  background-color: #ddd;
-  left: 0.1em;
+
+.card-body{
+  height: 20rem;
 }
-.movies li.selected {
-  background-color: #cfd8dc;
-  color: white;
+
+
+
+.card-title{
+
 }
-.movies li.selected:hover {
-  background-color: #bbd8dc;
-  color: white;
-}
-.movies .badge {
-  display: inline-block;
-  font-size: small;
-  color: white;
-  padding: 0.8em 0.7em 0 0.7em;
-  background-color: #405061;
-  line-height: 1em;
-  position: relative;
-  left: -1px;
-  top: -4px;
-  height: 1.8em;
-  margin-right: 0.8em;
-  border-radius: 4px 0 0 4px;
+
+.card-text{
+
 }
