--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,8 +1,9 @@
-<div>
+<div class="container-fluid mx-auto pt-5">
   <h5>Εφαρμογή αγοράς εισιτηρίων</h5>
+  <img style="height: 70%; width:50%; position:absolute; top:0; left:0; right:0; bottom:0; margin:auto; "
+                                          src="assets/images/cinema_element.png"/>
 </div>
 
-<img style="height: 70%; width:50%; position:absolute; top:0; left:0; right:0; bottom:0; margin:auto; "
-     src="assets/images/cinema_element.png"/>
+
 
 
