--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
         <a class="nav-link" routerLink="/rooms">Αίθουσες</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/movie_shows">Προβολές</a>
+        <a class="nav-link" routerLink="/movieShows">Προβολές</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/account">Λογαριασμός</a>
