--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,23 +11,28 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/movies">Ταινίες</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/rooms">Αίθουσες</a>
-      </li>
+<!--      <li class="nav-item">-->
+<!--        <a class="nav-link" routerLink="/rooms">Αίθουσες</a>-->
+<!--      </li>-->
       <li class="nav-item">
         <a class="nav-link" routerLink="/movieShows">Προβολές</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/account">Λογαριασμός</a>
-      </li>
+<!--      <li class="nav-item">-->
+<!--        <a class="nav-link" routerLink="/account">Λογαριασμός</a>-->
+<!--      </li>-->
       <li class="nav-item">
         <a class="nav-link" routerLink="/admin_panel">Διαχείριση</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/imageUpload">τεστ</a>
       </li>
-
     </ul>
+
+
+      <div>
+        <a class="nav-link" routerLink="/account">Λογαριασμός</a>
+      </div>
+
   </div>
 </nav>
 <router-outlet></router-outlet>
