--- a/src/app/datepicker/datepicker.component.html
+++ b/src/app/datepicker/datepicker.component.html
@@ -1,4 +1,4 @@
-<mat-form-field appearance="fill">
+<mat-form-field appearance="standard">
   <mat-label>Επιλέξτε ημερομηνία</mat-label>
   <!-- #docregion toggle -->
   <input matInput [matDatepicker]="picker">
