--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -9,12 +9,9 @@
 .custom-very-light-blue { color: #05DBF2; }
 .custom-grey { color: #BFAE99; }
 
-.text{
-  color: #033E8C;
-}
 
-.background-color{
-  color: #010626;
-}
 
+.nav-item a:hover {
+  color: #007bff;
+}
 
