--- a/src/app/movie-show/movie-show.component.html
+++ b/src/app/movie-show/movie-show.component.html
@@ -1,5 +1,16 @@
 <div class="container-fluid mx-auto pt-5 pb-5">
-<app-datepicker></app-datepicker>
+<div class="container container-fluid d-flex justify-content-center px-0">
+  <div class="row justify-content-center col-12">
+    <div class="col-sm-6 text-sm-center m-auto">
+      <h5>Αναζήτηση προβολών ανά ημέρα</h5>
+    </div>
+    <div class="col-sm-6">
+      <app-datepicker></app-datepicker>
+    </div>
+
+  </div>
+</div>
+
 
 
 </div>
