--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -10,16 +10,15 @@
             <p class="card-text"> {{movies[i].description}}</p>
           </div>
           <div class="list-group list-group-flush">
-            <div class="list-group-item">Προβολή :
+            <div class="list-group-item"><span>Προβολή :</span><br>
               <span *ngFor="let movieShow of movies[i].movieShowsOfMovie">
-                {{movieShow.showDate}} - {{movieShow.startTime}}
-              </span></div>
-            <div class="list-group-item">Αίθουσες :
-              <span *ngFor="let movieShow of movies[i].movieShowsOfMovie">
-                  {{movieShow.roomOfMovieShow.id}}
-              </span></div>
+                {{movieShow.showDate | date:'dd/MM/yyyy'}} <span> ώρα </span>
+                {{movieShow.startTime | date:'HH:MM'}}
+                <span>αίθουσα : {{movieShow.roomOfMovieShow.id}}</span>
+                <br></span></div>
             <div class="list-group-item">Διαθέσιμες θέσεις</div>
-            <div class="list-group-item card-link"><a href="#">Κράτηση</a></div>
+            <div class="list-group-item nav-link">
+              <a routerLink="/purchase">Κράτηση</a></div>
           </div>
 
         </div>
@@ -32,11 +31,17 @@
             <p class="card-text"> {{movies[i + 1].description}}</p>
           </div>
           <div class="list-group list-group-flush">
-            <div class="list-group-item">Ώρα προβολής</div>
-            <div class="list-group-item">Αίθουσα</div>
+            <div class="list-group-item"><span>Προβολή :</span><br>
+              <span *ngFor="let movieShow of movies[i+1].movieShowsOfMovie">
+                {{movieShow.showDate | date:'dd/MM/yyyy'}} <span> ώρα </span>
+                {{movieShow.startTime | date:'HH:MM'}}
+                <span>αίθουσα : {{movieShow.roomOfMovieShow.id}}</span>
+                <br></span></div>
             <div class="list-group-item">Διαθέσιμες θέσεις</div>
-            <div class="list-group-item card-link"><a href="#">Κράτηση</a></div>
+            <div class="list-group-item nav-link">
+              <a routerLink="/purchase">Κράτηση</a></div>
           </div>
+
         </div>
       </div>
       <div class="col-sm-4 mb-5">
@@ -44,16 +49,20 @@
           <img class="card-img-top" [src]="'data:image/jpeg;base64,'+movies[i+2].poster">
           <div class="card-body">
             <h5 class="card-title">{{movies[i + 2].title}}</h5>
-            <p class="card-text"> {{movies[i + 2].description}} </p>
+            <p class="card-text"> {{movies[i + 2].description}}</p>
           </div>
           <div class="list-group list-group-flush">
-            <div class="list-group-item">Ώρα προβολής</div>
-            <div class="list-group-item">Αίθουσα</div>
+            <div class="list-group-item"><span>Προβολή :</span><br>
+              <span *ngFor="let movieShow of movies[i+2].movieShowsOfMovie">
+                {{movieShow.showDate | date:'dd/MM/yyyy'}} <span> ώρα </span>
+                {{movieShow.startTime | date:'HH:MM'}}
+                <span>αίθουσα : {{movieShow.roomOfMovieShow.id}}</span>
+                <br></span></div>
             <div class="list-group-item">Διαθέσιμες θέσεις</div>
-            <div class="list-group-item card-link"><a href="#">Κράτηση</a></div>
+            <div class="list-group-item nav-link">
+              <a routerLink="/purchase">Κράτηση</a></div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
