movies html fixed , date passing from datepicker to parent

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -11,7 +11,11 @@
 
 
 
-.nav-item a:hover {
+.nav-item > a:hover {
   color: #007bff;
 }
 
+.nav-item >.active >a{
+  color: #007bff;
+  background-color: chartreuse;
+}
