--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #010626">
-  <a class="navbar-brand nav-link" routerLink="/index">My movie place</a>
+  <a class="navbar-brand nav-link" style="color: #007bff;" routerLink="/index">My movie place</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse"
           data-target="#navbarCollapse" aria-controls="navbarCollapse"
           aria-expanded="false" aria-label="Toggle navigation">
