search by date working

--- a/src/app/movie-show/movie-show.component.css
+++ b/src/app/movie-show/movie-show.component.css
@@ -22,3 +22,17 @@
   color: #007bff
 }
 
+
+.card{
+  width: 20rem;
+  height: 55rem;
+  margin:auto;
+}
+
+.card-img-top{
+  height: 25rem;
+}
+
+.card-body{
+  height: 20rem;
+}
