--- a/src/app/signin/signin.component.css
+++ b/src/app/signin/signin.component.css
@@ -11,8 +11,9 @@
 }
 
 .card {
-  width: 20rem;
+  width: 15rem;
   margin: 0 auto;
+  height: auto;
 }
 
 .custom-dark-blue { color: #010626; }
@@ -20,3 +21,5 @@
 .custom-light-blue { color: #033E8C; }
 .custom-very-light-blue { color: #05DBF2; }
 .custom-grey { color: #BFAE99; }
+
+
