redirecting with multiple params

--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -19,7 +19,7 @@
                 <span>Διαθέσιμες θέσεις {{movieShow.roomOfMovieShow.capacity-movieShow.showTickets.length}}</span>
                 <br></li></div>
             <div class="list-group-item nav-link">
-              <a routerLink="/purchase">Κράτηση</a></div>
+              <a [routerLink]="['/purchase']" [queryParams]="{movieId : movies[i].id}">Κράτηση</a></div>
           </div>
         </div>
       </div>
@@ -40,7 +40,7 @@
                 <span>Διαθέσιμες θέσεις {{movieShow.roomOfMovieShow.capacity-movieShow.showTickets.length}}</span>
                 <br></li></div>
             <div class="list-group-item nav-link">
-              <a routerLink="/purchase">Κράτηση</a></div>
+              <a [routerLink]="['/purchase']" [queryParams]="{movieId : movies[i+1].id}">Κράτηση</a></div>
           </div>
         </div>
       </div>
@@ -61,7 +61,7 @@
               <span>Διαθέσιμες θέσεις {{movieShow.roomOfMovieShow.capacity-movieShow.showTickets.length}}</span>
               <br></li></div>
             <div class="list-group-item nav-link">
-              <a routerLink="/purchase">Κράτηση</a></div>
+              <a [routerLink]="['/purchase']" [queryParams]="{movieId : movies[i+2].id}">Κράτηση</a></div>
           </div>
         </div>
       </div>
