--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -30,12 +30,13 @@
     <h6 class="card-header">
       Social Login Demo
     </h6>
-    <div class="card-block small"></div>
-    <img *ngIf="user.photoUrl" class="card-img-top img-responsive photo small" src="{{ user.photoUrl }}">
+    <div class="card-block"></div>
+    <img *ngIf="user.photoUrl" class="card-img-top img-responsive photo" src="{{ user.photoUrl }}">
     <div class="card-block">
       <h4 class="card-title">{{ user.name }}</h4>
       <p class="card-text">{{ user.email }}</p>
       <p class="card-text">Logged in with {{ user.provider }}</p>
+      <p class="card-text">{{ user.idToken }}</p>
     </div>
     <div class="card-block">
       <button class="btn btn-danger" (click)="signOut()">Sign out</button>
