--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -33,7 +33,7 @@
       </div>
     </form>
     <div class="alert alert-success" *ngIf="isLoggedIn">
-      Logged in as {{roles}}.
+      Logged in as {{role}}.
     </div>
   </div>
 </div>
