--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -3,7 +3,7 @@
     <h6 class="card-header">
       Σύνδεση
     </h6>
-    <form class="login-form" [formGroup]="formGroup" (ngSubmit)="loginForm()">
+    <form class="login-form" [formGroup]="formGroup" (ngSubmit)="onSubmit()">
       <div>
         <input class="form-control" placeholder="username" formControlName="email">
       </div>
